2013-09-25  Patrick Gansterer  <paroga@webkit.org>

        Fix template deduction for CollatorDefault

        * wtf/unicode/CollatorDefault.cpp:
        (WTF::Collator::userDefault): Use nullptr instead of 0.

2013-09-24  Anders Carlsson  <andersca@apple.com>

        Remove encoder create functions
        https://bugs.webkit.org/show_bug.cgi?id=121853

        Reviewed by Sam Weinig.

        Add a variadic version of createOwned.

        * wtf/OwnPtr.h:
        (WTF::createOwned):

2013-09-24  Mark Rowe  <mrowe@apple.com>

        <rdar://problem/14971518> WebKit should build against the Xcode default toolchain when targeting OS X 10.8

        Reviewed by Dan Bernstein.

        * Configurations/Base.xcconfig:

2013-09-23  Anders Carlsson  <andersca@apple.com>

        Remove WTF_USE_SCROLLBAR_PAINTER #define
        https://bugs.webkit.org/show_bug.cgi?id=121819

        Reviewed by Sam Weinig.

        All our supported systems use the scrollbar painter now, so get rid of the #ifdef.

        * wtf/Platform.h:

2013-09-23  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r156307.
        http://trac.webkit.org/changeset/156307
        https://bugs.webkit.org/show_bug.cgi?id=121817

        Broke the build, and crashes the compiler (Requested by ap on
        #webkit).

        * wtf/ListDump.h:
        (WTF::lessThan):
        (WTF::sortedListDump):

2013-09-23  Anders Carlsson  <andersca@apple.com>

        Test the waters and begin using lambdas
        https://bugs.webkit.org/show_bug.cgi?id=121809

        Reviewed by Andreas Kling.

        * wtf/ListDump.h:
        (WTF::sortedListDump):
        Use std::less instead of a custom lessThan function.

2013-09-23  Anders Carlsson  <andersca@apple.com>

        ListHashSet::removeLast should only remove one element.
        
        * wtf/ListHashSet.h:
        (WTF::ListHashSet::removeLast):

2013-09-23  Anders Carlsson  <andersca@apple.com>
