@@ -1,3 +1,11 @@
+2013-09-25  Anders Carlsson  <andersca@apple.com>
+
+        Un-indent HashTraits.h.
+
+        Rubber-stamped by Andreas Kling.
+
+        * wtf/HashTraits.h:
+
 2013-09-25  Patrick Gansterer  <paroga@webkit.org>
 
         Fix template deduction for CollatorDefault
